feat: jalon D - Scheduler (daemon)
